--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <input type="text" id="searchBar" placeholder="Search games..." />
 
   <div id="gameList">
-    <a class="game-link" href="CookieClicker.html">Cookie Clicker</a>
+    <a class="game-link" href="games/Cookie-Clicker.html">Cookie Clicker</a>
 
     <!-- Add more buttons here -->
   </div>
