--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
   <div id="gameList">
     <a class="game-link" href="games/Cookie-Clicker.html">Cookie Clicker</a>
+      <a class="game-link" href="games/Pixel-Speedrun.html">Pixel Speedrun</a>
 
     <!-- Add more buttons here -->
   </div>
