--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <div id="gameList">
     <a class="game-link" href="games/Cookie-Clicker.html">Cookie Clicker</a>
       <a class="game-link" href="games/Pixel-Speedrun.html">Pixel Speedrun</a>
+       <a class="game-link" href="games/Drive-Mad.html">Drive Mad</a>
  
 
     <!-- Add more buttons here -->
