--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -61,10 +60,8 @@
 
   <div id="gameList">
     <a class="game-link" href="games/Cookie-Clicker.html">Cookie Clicker</a>
-      <a class="game-link" href="games/Pixel-Speedrun.html">Pixel Speedrun</a>
-       <a class="game-link" href="games/Drive-Mad.html">Drive Mad</a>
- 
-
+    <a class="game-link" href="games/Pixel-Speedrun.html">Pixel Speedrun</a>
+    <a class="game-link" href="games/Drive-Mad.html">Drive Mad</a>
     <!-- Add more buttons here -->
   </div>
 
@@ -72,8 +69,13 @@
     document.addEventListener('DOMContentLoaded', () => {
       const searchBar = document.getElementById('searchBar');
       const gameList = document.getElementById('gameList');
-      const gameLinks = gameList.querySelectorAll('.game-link');
+      const gameLinks = Array.from(gameList.getElementsByClassName('game-link'));
 
+      // 🔠 Sort links alphabetically
+      gameLinks.sort((a, b) => a.textContent.localeCompare(b.textContent));
+      gameLinks.forEach(link => gameList.appendChild(link));
+
+      // 🔍 Search filter
       searchBar.addEventListener('input', () => {
         const query = searchBar.value.toLowerCase();
         gameLinks.forEach(link => {
@@ -82,18 +84,7 @@
         });
       });
     });
-    <script>
-  const container = document.getElementById('game-container');
-  const buttons = Array.from(container.getElementsByClassName('game-button'));
-
-  buttons.sort((a, b) => {
-    return a.textContent.localeCompare(b.textContent);
-  });
-
-  buttons.forEach(button => container.appendChild(button));
-</script>
   </script>
 
 </body>
-
 </html>
