--- a/games/A-Small-World-Cup.html
+++ b/games/A-Small-World-Cup.html
@@ -1,5 +1,6 @@
 
-
+  <meta charset="UTF-8">
+  <title>Nautilus94</title>
 
 </style><script src="https://cdn.jsdelivr.net/gh/bubbls/ruffle@a25d711e6294241dd4ad89f5ef65dc6bf34fcb24/offlineclient.js"></script><style type="text/css">#button {
   display:none;
