--- a/games/Baldis-Basics.html
+++ b/games/Baldis-Basics.html
@@ -9,7 +9,7 @@
     <base href="https://cdn.jsdelivr.net/gh/genizy/web-port@main/baldi-remaster/">
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Baldi's Basics Classic Remastered</title>
+    <title>Nautilus94</title>
     <style>
         html,
         body {
