--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
     <a class="game-link" href="games/Pixel-Speedrun.html">Pixel Speedrun</a>
     <a class="game-link" href="games/Drive-Mad.html">Drive Mad</a>
      <a class="game-link" href="games/A-Small-World-Cup.html">A Small World Cup</a>
-     <a class="game-link" href="games/There-Is-No-Game.html">There Is No Game</a>
+         <a class="game-link" href="games/There-Is-No-Game.html">There-Is-No-Game</a>
+  
+  
 
     <!-- Add more buttons here -->
   </div>
