--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <a class="game-link" href="games/Drive-Mad.html">Drive Mad</a>
      <a class="game-link" href="games/A-Small-World-Cup.html">A Small World Cup</a>
          <a class="game-link" href="games/There-Is-No-Game.html">There Is No Game</a>
+       <a class="game-link" href="games/Edys-Car-Simulator.html">Edy's Car Simulator</a>
   
   
 
