--- a/games/Edys-Car-Simulator.html
+++ b/games/Edys-Car-Simulator.html
@@ -9,7 +9,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Edys Car Simulator</title>
+  <title>Nautilus94</title>
   <style>
     html,
     body {
