--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
      <a class="game-link" href="games/A-Small-World-Cup.html">A Small World Cup</a>
          <a class="game-link" href="games/There-Is-No-Game.html">There Is No Game</a>
        <a class="game-link" href="games/Edys-Car-Simulator.html">Edy's Car Simulator</a>
+      <a class="game-link" href="games/Extreme-Run-3D.html.html">Extreme Run 3D</a>
   
   
 
