--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
          <a class="game-link" href="games/There-Is-No-Game.html">There Is No Game</a>
        <a class="game-link" href="games/Edys-Car-Simulator.html">Edy's Car Simulator</a>
       <a class="game-link" href="games/Extreme-Run-3D.html">Extreme Run 3D</a>
+      <a class="game-link" href="games/UZG.html">Untitled Zombie Game</a>
+      <a class="game-link" href="games/Ragdoll-Archers.html">Ragdoll Archers</a>
   
   
 
