--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <a class="game-link" href="games/Extreme-Run-3D.html">Extreme Run 3D</a>
       <a class="game-link" href="games/UZG.html">Untitled Zombie Game</a>
       <a class="game-link" href="games/Ragdoll-Archers.html">Ragdoll Archers</a>
+      <a class="game-link" href="games/Yellow.html">Yellow</a>
   
   
 
