--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
 
       // 🎵 Music Player Logic
       const songs = [
-        'music/song1.mp3',
-        'music/song2.mp3',
-        'music/song3.mp3'
+        'music/Kevin Macleod_Fluffing a Duck.mp3',
+      
       ];
 
       const audio = document.getElementById('audio');
