--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <a class="game-link" href="games/UZG.html">Untitled Zombie Game</a>
     <a class="game-link" href="games/Ragdoll-Archers.html">Ragdoll Archers</a>
     <a class="game-link" href="games/Yellow.html">Yellow</a>
+      <a class="game-link" href="games/Doge-Miner.html">Doge Miner</a>
     <!-- Add more buttons here -->
   </div>
 
