--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <a class="game-link" href="games/Ragdoll-Archers.html">Ragdoll Archers</a>
     <a class="game-link" href="games/Yellow.html">Yellow</a>
       <a class="game-link" href="games/Doge-Miner.html">Doge Miner</a>
+      <a class="game-link" href="games/EaglerCraft.html">Eaglercraft 1.5.2</a>
     <!-- Add more buttons here -->
   </div>
 
