--- a/games/Drive-Mad.html
+++ b/games/Drive-Mad.html
@@ -26,7 +26,7 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-  <title>Drive Mad</title>
+  <title>Nautilus94</title>
   <meta name="description" content="">
   <meta name="google" content="notranslate">
 
