--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <a class="game-link" href="games/Cookie-Clicker.html">Cookie Clicker</a>
     <a class="game-link" href="games/Pixel-Speedrun.html">Pixel Speedrun</a>
     <a class="game-link" href="games/Drive-Mad.html">Drive Mad</a>
+     <a class="game-link" href="games/Extreme-Run-3D.html">Extreme Run 3D</a>
     <!-- Add more buttons here -->
   </div>
 
